--- a/app/src/main/res/layout/fragment_strength_day_four.xml
+++ b/app/src/main/res/layout/fragment_strength_day_four.xml
@@ -30,7 +30,7 @@
             android:scaleType="fitXY"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/imageView"
+            android:id="@+id/closeGripBenchImage"
             android:src="@drawable/closegrip"
             android:layout_below="@+id/cpbench"
             android:clickable="true"
@@ -43,7 +43,7 @@
             android:id="@+id/benchDetail"
             android:textColor="#ffffff"
             android:textSize="32dp"
-            android:layout_below="@+id/imageView"
+            android:layout_below="@+id/closeGripBenchImage"
             android:layout_gravity="center_horizontal"/>
 
         <ImageButton
