--- a/app/src/main/res/layout/fragment_strength_day_one.xml
+++ b/app/src/main/res/layout/fragment_strength_day_one.xml
@@ -32,7 +32,7 @@
                 android:scaleType="fitXY"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView"
+        android:id="@+id/closeGripBenchImage"
         android:src="@drawable/bench"
                 android:clickable="true"
         android:layout_below="@+id/benchText"
@@ -48,7 +48,7 @@
                 android:id="@+id/flyText"
                 android:textColor="#ffffff"
                 android:textSize="32dp"
-                android:layout_below="@+id/imageView"
+                android:layout_below="@+id/closeGripBenchImage"
                 android:layout_centerHorizontal="true" />
 
             <TextView
