--- a/app/src/main/res/layout/fragment_strength_day_three.xml
+++ b/app/src/main/res/layout/fragment_strength_day_three.xml
@@ -31,7 +31,7 @@
             android:scaleType="fitXY"
             android:layout_width="wrap_content"
             android:layout_height="200dp"
-            android:id="@+id/imageView"
+            android:id="@+id/closeGripBenchImage"
             android:src="@drawable/deadlift"
             android:layout_below="@+id/squat"
             android:clickable="true"
@@ -44,7 +44,7 @@
             android:id="@+id/dbrow"
             android:textColor="#ffffff"
             android:textSize="32dp"
-            android:layout_below="@+id/imageView"
+            android:layout_below="@+id/closeGripBenchImage"
             android:layout_gravity="center_horizontal"/>
 
         <ImageButton
