--- a/app/src/main/res/layout/fragment_strength_day_two.xml
+++ b/app/src/main/res/layout/fragment_strength_day_two.xml
@@ -30,7 +30,7 @@
                 android:scaleType="fitXY"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/imageView"
+                android:id="@+id/closeGripBenchImage"
                 android:src="@drawable/squat"
                 android:layout_gravity="center_horizontal"
                 android:clickable="true"
@@ -45,7 +45,7 @@
                 android:textColor="#ffffff"
                 android:textSize="32dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_below="@+id/imageView"/>
+                android:layout_below="@+id/closeGripBenchImage"/>
 
             <ImageButton
                 android:scaleType="fitXY"
