--- a/app/src/main/res/layout/fragment_body_building_day_four.xml
+++ b/app/src/main/res/layout/fragment_body_building_day_four.xml
@@ -29,7 +29,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Deadlift"
         android:id="@+id/deadliftText"
-        android:layout_gravity="left|center_vertical"
+        android:layout_gravity="center_horizontal"
         android:textColor="#ffffff"
         android:textSize="25dp" />
 
@@ -39,15 +39,17 @@
         android:text="4 Sets of 8 Repetitions. (2 minute rest between sets)"
         android:layout_marginBottom="15dp"
         android:id="@+id/deadliftDetail"
-        android:layout_gravity="left|center_vertical"
-        android:textColor="#ffffff" />
+        android:layout_gravity="center_horizontal"
+        android:textColor="#ffffff"
+
+        />
 
     <ImageButton
         android:scaleType="fitXY"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/deadliftImage"
-        android:layout_gravity="right|top"
+        android:layout_gravity="center_horizontal"
         android:layout_marginBottom="50dp"
         android:src="@drawable/deadlift"
         android:clickable="true"
@@ -58,7 +60,7 @@
         android:layout_height="63dp"
         android:text="Pull-ups"
         android:id="@+id/pullupText"
-        android:layout_gravity="left|center_vertical"
+        android:layout_gravity="center_horizontal"
         android:layout_marginBottom="40dp"
         android:textColor="#ffffff"
         android:textSize="25dp" />
@@ -67,7 +69,7 @@
                 android:layout_height="49dp"
                 android:text="3 Sets of 6-10 repetitions depending on skill level."
                 android:id="@+id/pullupDetail"
-                android:layout_gravity="left|center_vertical"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="20dp"
                 android:textColor="#ffffff" />
     <ImageButton
@@ -75,7 +77,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/pullupImage"
-        android:layout_gravity="right|center_vertical"
+        android:layout_gravity="center_horizontal"
         android:layout_marginBottom="35dp"
         android:src="@drawable/pullup"
         android:clickable="true"
@@ -88,7 +90,7 @@
                 android:layout_height="59dp"
                 android:text="Dumbbell Row"
                 android:id="@+id/dumbbellRowText"
-                android:layout_gravity="left|bottom"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="125dp"
                 android:textColor="#ffffff"
                 android:textSize="25dp"
@@ -101,7 +103,7 @@
         android:layout_height="34dp"
         android:text="4 sets of 15 repetitions."
         android:id="@+id/dumbbellRowDetail"
-        android:layout_gravity="left|bottom"
+        android:layout_gravity="center_horizontal"
         android:layout_marginBottom="120dp"
         android:textColor="#ffffff"
         android:layout_below="@+id/dumbbellRowText"
@@ -115,10 +117,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/dumbbellRowImage"
-        android:layout_gravity="right|bottom"
+        android:layout_gravity="center_horizontal"
         android:layout_marginBottom="70dp"
         android:clickable="true"
-        android:src="@drawable/dbrow" />
+        android:src="@drawable/dbrow"
+        />
 
 
 
