--- a/app/src/main/res/layout/fragment_body_building_two.xml
+++ b/app/src/main/res/layout/fragment_body_building_two.xml
@@ -20,14 +20,16 @@
                 android:text="BODY BUILDING DAY 2"
                 android:id="@+id/bodyBuildingDay2Text"
                 android:layout_gravity="center_horizontal|top"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                android:layout_marginBottom="10dp"
+                />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Barbell Bench Press"
         android:id="@+id/benchText"
-        android:layout_gravity="left|center_vertical"
+        android:layout_gravity="center_horizontal"
         android:textColor="#ffffff"
         android:textSize="25dp" />
 
@@ -37,8 +39,10 @@
         android:text="4 Sets of 10-12 Repetitions. (1 minute rest between sets)"
         android:layout_marginBottom="15dp"
         android:id="@+id/benchDetail"
-        android:layout_gravity="left|center_vertical"
-        android:textColor="#ffffff" />
+        android:layout_gravity="center_horizontal"
+        android:textColor="#ffffff"
+        android:layout_marginLeft="20dp"
+        />
 
     <ImageButton
         android:scaleType="fitXY"
@@ -58,21 +62,21 @@
         android:layout_height="63dp"
         android:text="Dumbbell Flyes"
         android:id="@+id/flyText"
-        android:layout_gravity="left|center_vertical"
-        android:layout_marginBottom="40dp"
+        android:layout_gravity="center_horizontal"
         android:textColor="#ffffff"
         android:textSize="25dp"
         android:layout_below="@+id/bench"
         android:layout_above="@+id/flyDetail"
+        android:layout_marginLeft="20dp"
         />
 
     <TextView
         android:layout_width="206dp"
         android:layout_height="49dp"
-        android:text="4 Sets of 15 lighter weight repetitions. "
+        android:text="4 Sets of 15 lighter weight repetitions "
         android:id="@+id/flyDetail"
-        android:layout_gravity="left|center_vertical"
-        android:layout_marginBottom="20dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="20dp"
         android:textColor="#ffffff"
         android:layout_below="@+id/flyText"
         android:layout_above="@+id/flyImage"
@@ -97,7 +101,7 @@
         android:layout_height="59dp"
         android:text="Push-up"
         android:id="@+id/pushupText"
-        android:layout_gravity="left|bottom"
+        android:layout_gravity="center_horizontal"
         android:layout_marginBottom="125dp"
         android:textColor="#ffffff"
         android:textSize="25dp"
@@ -109,7 +113,7 @@
             <TextView
                 android:layout_width="177dp"
                 android:layout_height="34dp"
-                android:text="4 sets of 10-30 concentrated repetitions (Depending on skill level)."
+                android:text="4 sets of 10-30 concentrated repetitions (Depending on skill level)"
                 android:id="@+id/pushupDetail"
                 android:layout_gravity="left|bottom"
                 android:layout_marginBottom="120dp"
