--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,34 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/drawerview"
+    android:layout_gravity="center_horizontal|top"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+
+
+
+   <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:id="@+id/container"
-    android:layout_height="match_parent"
+    android:layout_height="match_parent">
 
-    >
+       <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_centerInParent="true"
+           android:text="RELATIVELAYOUT"/>
 
 
-</FrameLayout>
+
+
+</RelativeLayout>
+    <ListView
+        android:layout_width="250dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="left"
+        android:id="@+id/listView"
+        android:background="#c3ff87">
+
+    </ListView>
+</android.support.v4.widget.DrawerLayout>
