Strength Day 1-5 workout complete added. Just need to add functionality

--- a/app/src/main/res/layout/fragment_strength_day_four.xml
+++ b/app/src/main/res/layout/fragment_strength_day_four.xml
@@ -86,6 +86,14 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true" />
 
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Workout Complete!"
+            android:id="@+id/completeDay4s"
+            android:layout_gravity="right|bottom" />
+
     </LinearLayout>>
 
     </ScrollView>
