--- a/app/src/main/res/layout/fragment_strength_day_one.xml
+++ b/app/src/main/res/layout/fragment_strength_day_one.xml
@@ -96,6 +96,14 @@
                 android:layout_alignParentStart="true" />
 
 
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Workout Complete!"
+                android:id="@+id/completeDay1s"
+                android:layout_gravity="right|bottom" />
+
+
         </RelativeLayout>>
 
 
