--- a/app/src/main/res/layout/fragment_strength_day_two.xml
+++ b/app/src/main/res/layout/fragment_strength_day_two.xml
@@ -88,6 +88,14 @@
                 android:layout_alignParentStart="true" />
 
 
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Workout Complete!"
+                android:id="@+id/completeDay2s"
+                android:layout_gravity="right|bottom" />
+
+
         </LinearLayout>>
 
     </ScrollView>
