--- a/app/src/main/res/layout/fragment_profile__page.xml
+++ b/app/src/main/res/layout/fragment_profile__page.xml
@@ -106,7 +106,7 @@
             android:layout_marginLeft="50dp"
             />
 
-        <ImageView
+        <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_camera"
@@ -114,7 +114,8 @@
             android:layout_alignBottom="@+id/name"
             android:layout_alignEnd="@+id/saveButtonProfile"
             android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            />
 
         <Button
             style="?android:attr/buttonStyleSmall"
