Weightloss button functionality added and buttons fixed

--- a/app/src/main/res/layout/fragment_weightloss_day_two.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day_two.xml
@@ -115,7 +115,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Workout Complete!"
-            android:id="@+id/completeDay1wl"
+            android:id="@+id/completeDay2w"
             android:layout_gravity="right|bottom" />
 
         <Button
