--- a/app/src/main/res/layout/fragment_weightloss_day_four.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day_four.xml
@@ -116,7 +116,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Workout Complete!"
-                android:id="@+id/completeDay1wl"
+                android:id="@+id/completeDay4w"
                 android:layout_gravity="right|bottom" />
 
             <Button
