--- a/app/src/main/res/layout/fragment_track_progress.xml
+++ b/app/src/main/res/layout/fragment_track_progress.xml
@@ -30,14 +30,15 @@
         android:layout_gravity="center_horizontal|top"
         android:textColor="#ffffff" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="BACK"
-        android:id="@+id/TPBack"
-        android:layout_gravity="center_horizontal|bottom" />
 
-        <ListView
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:contextClickable="true"
+                android:id="@+id/spinner_dropdown"
+                android:layout_gravity="center_horizontal" />
+
+            <ListView
             android:layout_width="wrap_content"
             android:layout_height="232dp"
             android:id="@+id/listView2"
